--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetching Launches</title>
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Space X Launches</h1>
-    <ul id="launch-list"></ul>
+    <header>
+        <h1>SpaceX Launches</h1>
+    </header>
+    <main>
+        <button id="load-btn">
+            Load Launches
+        </button>
+        <ul id="launch-list">
+
+        </ul>
+    </main>
 </body>
 </html>
